@@ -1,3 +1,7 @@
+2004-02-09  Anil Paranjpe  <anilp1@KPITCummins.com>
+
+	* h8300.h (32bit ldc/stc): Add relaxing support.
+
 2004-01-12  Anil Paranjpe  <anilp1@KPITCummins.com>
 	
 	* h8300.h (BITOP): Pass MEMRELAX flag.
